Bug 1089581 - Convert nsLineBox::SlideBy to use logical coordinates. r=smontagu